Fix some issues with alignment. Removed -10 padding on most top components, instead fixed the layout section's padding.

--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -7,7 +7,6 @@
   min-height: 60px;
   /* background-color: rgba(0,0,0, 0);
   background-color: #070D1F; */
-  margin-left: -10px;
   position: fixed;
   top: 0;
   z-index: 10;
