--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -10,7 +10,7 @@
   flex: 1;
   min-height: 100vh;
   height: 100%;
-  margin-left: 180px;
+  margin-left: 170px;
 }
 
 @media screen and (max-width: 1200px) {
