--- a/pages/cdp/cdp.module.css
+++ b/pages/cdp/cdp.module.css
@@ -3,7 +3,6 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0px 48px;
   margin-top: 0px;
   padding-bottom: 48px;
   position: relative;
@@ -59,8 +58,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   position: absolute;
-  width: calc(100% + 10px);
-  left: -10px;
+  width: 100%;
   padding: 50px 70px;
   z-index: 9;
   top: 60px;
@@ -117,8 +115,12 @@
   color: #374DFA;
 }
 
+.padded {
+  padding: 0px 48px;
+}
+
 @media screen and (max-width: 1600px) {
-  .cdpContainer {
+  .padded {
     padding: 0px 24px;
   }
   .overviewContainer {
