--- a/pages/invest/invest.module.css
+++ b/pages/invest/invest.module.css
@@ -194,7 +194,7 @@
 }
 
 .vaultFilters {
-  width: calc(100% + 10px);
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -203,7 +203,6 @@
   background: #111729;
   position: sticky;
   top: 60px;
-  margin-left: -10px;
   padding: 10px 0;
   z-index: 9;
   border-radius: 0 !important;
@@ -315,9 +314,8 @@
   justify-content: space-between;
   flex-wrap: wrap;
   position: relative;
-  width: calc(100% + 10px);
-  left: -10px;
-  padding: 45px 10px;
+  width: 100%;
+  padding: 45px 12px;
   padding-left: 70px;
   z-index: 9;
   top: 60px;
@@ -417,9 +415,8 @@
   }
 
   .overviewContainer2 {
-    width: calc(100% + 10px);
-    left: -10px;
-    padding: 45px 10px;
+    width: 100%;
+    padding: 45px 12px;
     padding-left: 70px;
     z-index: 9;
     top: 0px;
@@ -429,7 +426,7 @@
   }
 
   .vaultFilters {
-    width: calc(100% + 10px);
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
